--- a/Frontend/src/css/CasteVote.css
+++ b/Frontend/src/css/CasteVote.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    overflow-y: scroll;
   }
   
   .expertNavbar {
@@ -13,7 +14,6 @@ body {
     width: 100%;
     height: 100vh;
     background-color: white;
-    overflow: auto;
   }
   
   .formheader {
