--- a/Frontend/src/css/ScheduleElection.css
+++ b/Frontend/src/css/ScheduleElection.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  scroll-behavior: auto;
 }
 .expertNavbar {
   background-color: #f8f9fa;
@@ -11,7 +11,9 @@ body {
   width:100%;
   height: 100vh;
   background-color:white;
-  overflow: auto;
+  scroll-behavior: smooth; /* Smooth scrolling for a better user experience */
+  height: 100vh;
+  overflow: hidden; /* Prevent unnecessary scrolling for the body */
 }
 .formheader{
   background-color: white;
@@ -49,4 +51,19 @@ body {
 .submitLink{
   text-decoration: none;
   color: white;
+}
+
+
+.candidateDetails {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.partySymbol {
+  width: 50px;
+  height: 50px;
+  object-fit: contain; /* Ensures the image is not distorted */
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
